# board-games-library

./: .coveragerc  .gitignore  .pre-commit-config.yaml  0001__initial_8py.html  0001__initial_8py_source.html  App_8jsx.html  App_8jsx_source.html  LICENSE  README.md  admin_8py.html  admin_8py_source.html  annotated.html  apps_8py.html  apps_8py_source.html  asgi_8py.html  asgi_8py_source.html  boardgames_2____init_____8py.html  boardgames_2____init_____8py_source.html  boardgames_2urls_8py.html  boardgames_2urls_8py_source.html  classes.html  classgames_1_1apps_1_1GamesConfig-members.html  classgames_1_1apps_1_1GamesConfig.html  classgames_1_1apps_1_1GamesConfig__coll__graph.map  classgames_1_1apps_1_1GamesConfig__coll__graph.md5  classgames_1_1migrations_1_10001__initial_1_1Migration-members.html  classgames_1_1migrations_1_10001__initial_1_1Migration.html  classgames_1_1migrations_1_10001__initial_1_1Migration__coll__graph.md5  classgames_1_1migrations_1_10001__initial_1_1Migration__inherit__graph.map  classgames_1_1models_1_1BoardGame-members.html  classgames_1_1models_1_1BoardGame.html  classgames_1_1models_1_1BoardGame__coll__graph.map  classgames_1_1models_1_1BoardGame__coll__graph.md5  dir_02816eb06c6b41f091f006a4a9552b1f.html  dir_02816eb06c6b41f091f006a4a9552b1f_dep.map  dir_02816eb06c6b41f091f006a4a9552b1f_dep.md5  dir_4008990e50893109689fe84bf9686ec2.html  dir_4008990e50893109689fe84bf9686ec2_dep.map  dir_4008990e50893109689fe84bf9686ec2_dep.md5  dir_5a511d5404af82d356dedc5ecc639798.html  (+102 more)
.github/workflows/: auto_assign.yml  aws_check.yml  build_and_push.yml  checkov-infra.yml  checkov_infra.yml  cluster_setup.yml  conventional_commits.yml  deploy.yml  deploy_eks.yml  docs.yml  generate-docs.yml  quality_code_check.yml  run_app_unit_tests.yml  run_linter_and_formatter.yml  security_scan.yml  terraform_core.yml  terraform_env_dev.yml  terraform_platform.yml  unit_tests.yml  validate_build.yml
app/backend/: Wroclaw_List of boardgames.xlsx  Wroclaw_list of boardgames.xlsx  manage.py
docs/: Doxyfile  Makefile  k8s.md  mainpage.md  overview.md  pre-commit.md
infra/k8s/: README.md  (+9 more)
pipeline/: commit_checker.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_3.js  namespaces_0.js  namespaces_1.js  namespaces_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_9.js  variables_a.js  (+3 more)
(+130 files in other folders)
