# -----------------------------
# Project settings
# -----------------------------

[project]
name = "boardgames"
version = "0.1.0"
description = "A PoC project for board games"
authors = [
    { name = "Dariusz Drozdek", email = "dariusz.drozdek@globallogic.com" },
    { name = "Krzysztof Szpieg", email = "krzysztof.szpieg@globallogic.com" },
    { name = "Rafał Tatuń", email = "rafal.tatun@globallogic.com" }
]
license = "MIT"
requires-python = ">=3.12"

# -----------------------------
# Project build dependencies
# -----------------------------

dependencies = [
    "Django==6.0.2",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "dj-database-url==2.3.0",
    "gunicorn==25.1.0",
    "openpyxl==3.1.5",
    "psycopg2-binary==2.9.10",
]

# -----------------------------
# Dependencies for development and testing
# -----------------------------

[project.optional-dependencies]
dev = [
    # Code quality
    "ruff==0.15.2",
    "pre-commit==4.5.1",

    # Testing
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.12.0",

    # Security
    "bandit==1.9.3",
    "pip-audit==2.10.0",

    # Dependency management
    "pip-tools==7.5.3",
]

# -----------------------------
# Ruff configuration
# -----------------------------

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
# Project-specific exclusions.
    "app/**/migrations/**",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# -----------------------------
# pytest configuration
# -----------------------------

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "boardgames.settings"
django_find_project = false
pythonpath = ["app", "app/backend"]
testpaths = ["app/tests"]
addopts = "-vvv"
